# hypertube_backend

./: .env.template  .gitignore  Cargo.toml  compose.yml  configuration.json  index.html  logs.txt  res.json  test_configuration.json  todo
.github/workflows/: general.yaml
.sqlx/: query-29fd0d072df275c68af284ae17ff24fd68d36c937fa0ee9a5fccdc64a3f2418e.json  query-3a0f50757bdf3167a229ca3c314e24b13e16aa6e04f287650ba533f488b0428e.json  query-7f081702b0f89e6719800ac526872aea21e01b602d647f959661b9cb7072247f.json  query-8e3b372b5c41eb7bdfa8f607130f250a09947119b3fd5ceb188c9f507df85adc.json  query-9481c32a8b69838081fa978e0156175b4e0d39319402aed76bbbe5b853556d8d.json  query-a9a07f985500eb4d83dba367f6307f6cd36d21aff6fe721779b9f74b3254ead8.json  query-cf1476359501f6eef5fd2e868451a4d32baf03aafd0d9018a82201abe326e658.json  query-d150f1fae593af6c02b10b26ef552bfc00040c6ffb0da6cbf39cab0fc9729d77.json  query-f54bcf1d8cb7555b766574088b98f1aa5f6ef9b4400385783a101a10815aea8d.json  query-f683eb27186f7064b059e977f1ffb601454b46d87db164243f0e2c401d20b96f.json  query-f863c3d5782d6b0be8cc9a55cf7335fbe813b7f720454009f4e8b15e42daca84.json  query-fe772c330fa74c3db01507e56f420bc0bd05460b2e9aa155282edcfef6b5c5f1.json
backend.hypertube.service/: Dockerfile
backend.hypertube.service/hypertube_backend/: .env.template  .gitignore  Cargo.toml  Makefile  index.html  script.sh  test_configuration.json
backend.hypertube.service/hypertube_backend/.sqlx/: query-144ede6f88e55335cda271f38f311ff57c10c70bdc4037f1bd9f6f95a534bb4c.json  query-52e179ef3aa17efc29238fd19e6326eb748f6f5c141007a7942d8ce8a0a23dbd.json  query-549a37140d78eee72552734f58e4e7766ed4ab2a810e3c7a08abb3dd12e74550.json  query-57003217bac639929e94d07d8f9a263f08b97f7e4cbd5a751ab8c9761b825e97.json  query-638722be4b11602145d16f1f3119bb7e9b0a7092f7ca3e943dfe39eedfadee24.json  query-9481c32a8b69838081fa978e0156175b4e0d39319402aed76bbbe5b853556d8d.json  (+6 more)
migrations/: 20240622143025_create_user_table.sql  20240705094035_update_password_column.sql  20240707114301_add_session_table.sql  20240709085131_users_table_update.sql  20240709162908_password_reset_verification_code.sql  20240710095840_update_password_verification_table.sql  20240713142852_create_watched_movies_table.sql  20240713142934_create_favorite_movies_table.sql  20240719122903_torrented_movies.sql
scripts/: init_db.sh  init_db_sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs  util.rs
src/middleware/: authentication.rs  check_jwt_token.rs  mod.rs
src/passport/: discord_stategy.rs  forty_two.rs  forty_two_strategy.rs  github_strategy.rs  google_strategy.rs  mod.rs  util.rs
src/routes/: hello_world.rs  mod.rs
src/routes/comments/: get_movie_comments.rs  mod.rs  (+2 more)
tests/: health_check.rs  test_startup.rs  test_user_routes.rs
(+95 files in other folders)
