[package]
name = "hypertube_backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hypertube_backend"

[dependencies]
actix-web = "4.7.0"
serde = { version = "1.0.203", features = ["serde_derive"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.14.0"

[dev-dependencies]
actix-rt = "2.10.0"
